# Playground

./: .buildpacked  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  bootstrap.bat  build.bat  getVendor.bat  getVendor.sh  pack.bat
Documentaion/: Documentation.lnk
Documentaion/html/: annotated.html  annotated_dup.js  classes.html  dir_0045f852bf8045b6d5abd9c9eb54a446.html  dir_0045f852bf8045b6d5abd9c9eb54a446.js  dir_170a3010dbaae8e90ad586270e92aea0.html  dir_170a3010dbaae8e90ad586270e92aea0.js  dir_35173a8cde922103fc95fa6281e03c54.html  dir_35173a8cde922103fc95fa6281e03c54.js  dir_3616d9be99f842bea9ec3e3cd080cd13.html  dir_3616d9be99f842bea9ec3e3cd080cd13.js  dir_3b02d2b695317e4decaee1a750fc2b2f.html  dir_3b02d2b695317e4decaee1a750fc2b2f.js  dir_5285d20250ec807585103aaa46373eed.html  dir_5285d20250ec807585103aaa46373eed.js  dir_591f5829a089fe794e2e00abb2757e4d.html  dir_591f5829a089fe794e2e00abb2757e4d.js  dir_59cf02e464dfe6f24d5a731cfa009a5d.html  dir_59cf02e464dfe6f24d5a731cfa009a5d.js  dir_6b63af9bf227c95b77f2d7bdc3fc5475.html  dir_7d4b515bc15c726eeed67b05ad9b3220.html  dir_7d4b515bc15c726eeed67b05ad9b3220.js  dir_8ec75b1953678e573ebb50012a0d868f.html  dir_8ec75b1953678e573ebb50012a0d868f.js  dir_946c5c275bbc0574e1489eaa8e074241.html  dir_946c5c275bbc0574e1489eaa8e074241.js  dir_acd517e5c69df03aa1e330a1038eef6c.html  dir_acd517e5c69df03aa1e330a1038eef6c.js  files.html  files_dup.js  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func.js  functions_func_b.html  functions_func_c.html  (+55 more)
Documentaion/html/d0/d25/: md_markdown_examples__serializer_example.html
Documentaion/html/d0/d26/: struct_g_f_x_1_1_sprite_sheet.html  struct_g_f_x_1_1_sprite_sheet.js
Documentaion/html/d0/d53/: struct_input_1_1_mouse_button-members.html
Documentaion/html/d0/d66/: md_markdown_examples__file_example.html
Documentaion/html/d0/dbd/: md_markdown_examples__string_example.html
Documentaion/html/d0/dc3/: _playground_8md.html
Documentaion/html/d0/dd4/: md_markdown__logger_example.html
Documentaion/html/d0/df5/: struct_g_f_x_1_1_shader-members.html
Documentaion/html/d1/d01/: struct_highlight-members.html
Documentaion/html/d1/d18/: struct_string.html  struct_string.js
Documentaion/html/d1/d2a/: struct_g_f_x_1_1_sprite.html  struct_g_f_x_1_1_sprite.js
Documentaion/html/d1/d52/: md_markdown_examples__logger_example.html
Documentaion/html/d1/d62/: struct_g_f_x_1_1_batch_vertex-members.html
Documentaion/html/d1/d8c/: logger_8h.html  logger_8h.js  logger_8h_source.html
Documentaion/html/d1/da6/: struct_result.html  struct_result.js
Documentaion/html/d1/dab/: struct_string_view-members.html
Documentaion/html/d1/dbc/: _string_example_8md.html
Documentaion/html/d1/dc6/: struct_f_s_1_1_serializer_1_1_node-members.html
Documentaion/html/d1/ddd/: struct_r_a_m___info_1_1_virtual_memory.html  struct_r_a_m___info_1_1_virtual_memory.js
Documentaion/html/d1/df4/: shader_8h.html  shader_8h.js  shader_8h_source.html
Documentaion/html/d2/d06/: namespace_window.html  namespace_window.js
Documentaion/html/d2/d25/: namespace_g_f_x_1_1_sprite_sheet_builder.html
Documentaion/html/d2/d73/: struct_window_1_1_monitor.html  struct_window_1_1_monitor.js
Documentaion/html/d2/d94/: md_markdown_examples__memory_leak_tracker.html
Documentaion/html/d2/daa/: struct_f_s_1_1_serializer.html  struct_f_s_1_1_serializer.js
Documentaion/html/d2/dd3/: namespace_f_s.html  (+1 more)
Documentaion/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  (+90 more)
Documentaion/markdown/: Examples.md  LoggerExample.md  MemoryLeakTracker.md  Playground.md  build.md
Documentaion/markdown/examples/: FileExample.md  HotLoaderExample.md  LoggerExample.md  MemoryLeakTracker.md  SerializerExample.md  StringExample.md
Playground/: main.cpp
Playground/hdr/: core.h
Playground/hdr/gfx/: batch.h  gfx.h  renderer.h
Playground/hdr/window/: input.h
Playground/src/: core.cpp
Playground/src/gfx/: batch.cpp  gfx.cpp  renderer.cpp  shader.cpp
Playground/src/window/: Input.cpp  window.cpp
PlaygroundLib/: CMakeLists.txt
PlaygroundLib/glad/include/glad/: glad.h
PlaygroundLib/glad/src/: glad.c
PlaygroundLib/hdr/: core.h  filelogger.h  logger.h
PlaygroundLib/hdr/gfx/: batch.h  camera.h  gfx.h  image.h  quad.h  renderer.h  shader.h  vao.h  vbo.h
PlaygroundLib/hdr/gfx/batchrenderer/: batch.h  batchhandler.h  batchvertex.h
PlaygroundLib/hdr/gfx/text/: chararcter.h  font.h  renderable_text.h  word.h
PlaygroundLib/hdr/math/: random.h
PlaygroundLib/hdr/util/: FileStream.h  hotloader.h  memory.h  string.h  systeminfo.h
PlaygroundLib/hdr/util/buffer/: binarybuffer.h  iterator.h  list.h  map.h  pair.h  queue.h  string.h
PlaygroundLib/hdr/window/: input.h  window.h
PlaygroundLib/src/: core.cpp  filelogger.cpp  logger.cpp
PlaygroundLib/src/gfx/: batch.cpp  camera.cpp  gfx.cpp  image.cpp  quad.cpp  renderer.cpp  shader.cpp  vao.cpp  vbo.cpp
PlaygroundLib/src/gfx/batchrenderer/: batch.cpp  batchhandler.cpp
PlaygroundLib/src/gfx/text/: font.cpp  renderable_text.cpp  word.cpp
PlaygroundLib/src/math/: random.cpp
PlaygroundLib/src/util/: FileStream.cpp  String.cpp  hotloader.cpp  memory.cpp  systeminfo.cpp
PlaygroundLib/src/util/buffer/: String.cpp  binarybuffer.cpp
PlaygroundLib/src/window/: Input.cpp  window.cpp
Sandbox/: CMakeLists.txt  main.cpp
Sandbox/hdr/: mempicker.h
Sandbox/scr/: mempicker.cpp
assets/settings/: winSettings.node
assets/shader/: shader.frag  shader.vert  shaderText.frag  textshader.frag  textshader.vert  tshader.vert
(+160 files in other folders)
